syntax = "proto3";

option java_multiple_files = true;
package com.wsiz.grpc;

service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshRequest) returns (AuthResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
}
